--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Voice of Bharat</title>
+    <title>Voice of Bharat IN</title>
 </head>
-<body>
-    <h1>Welcome to Voice of Bharat 🇮🇳</h1>
+
+<body style="font-family:Arial; text-align:center; padding-top:60px;">
+
+    <h1>Welcome to Voice of Bharat IN</h1>
     <p>This is the beginning of something great!</p>
+
+    <br><br>
+
+    <a href="/login">
+        <button style="padding:12px 25px; font-size:16px;">Login</button>
+    </a>
+
+    <a href="/signup">
+        <button style="padding:12px 25px; font-size:16px; margin-left:10px;">Signup</button>
+    </a>
+
 </body>
 </html>
