--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>ScrollBreaker</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Voice of Bharat</title>
 </head>
 <body>
+    <h1>Voice of Bharat</h1>
 
-<div class="container center">
-    <h1 class="title">SCROLLBREAKER</h1>
-    <p class="subtitle">Break free from the loop.</p>
-
-    <a href="/feed" class="btn">Enter Feed</a>
-    <a href="/create" class="btn-outline">Create Post</a>
-</div>
-
+    <a href="/feed">Go to Feed</a><br><br>
+    <a href="/create">Create a Post</a>
 </body>
 </html>
